--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mbd-s/cold-food#readme",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "twit": "^2.2.4"
   }
 }
