--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mbd-s/cold-food#readme",
   "dependencies": {
+    "babyparse": "^0.4.6",
     "cron": "^1.1.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
