--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "babyparse": "^0.4.6",
     "body-parser": "^1.15.1",
+    "connect-wwwhisper": "^0.1.15",
     "cron": "^1.1.0",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.2",
